# SortingInRust

./: Cargo.toml  README.md
src/: bubble_sort.rs  canvas.rs  counting_sort.rs  heap_sort.rs  insertion_sort.rs  main.rs  merge_sort.rs  quick_sort.rs  random_sort.rs  selection_sort.rs  shell_sort.rs  stalin_sort.rs
static/: index.html  style.css
