[package]
name = "sorting_in_rust"
version = "0.1.0"
authors = ["Krister Wolfhard <krister.wolfhard@it-designers.de>","Brian Brander <ceinaxt@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = [ "stdweb" ]}
stdweb = "0.4.20"
instant = { version = "0.1", features = [ "stdweb" ] }
